# SocketKit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup_ios.sh
EventPP/: Communicator.cpp  Communicator.hpp  EventCallbackInterface.cpp  EventCallbackInterface.hpp  SocketAddress.cpp  SocketAddress.hpp  SocketException.cpp  SocketException.hpp  main.cpp
EventPP.xcodeproj/: project.pbxproj
EventPP.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
EventPP.xcodeproj/project.xcworkspace/xcuserdata/cmst0us.xcuserdatad/: UserInterfaceState.xcuserstate
EventPP.xcodeproj/xcuserdata/cmst0us.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
EventPP.xcodeproj/xcuserdata/cmst0us.xcuserdatad/xcschemes/: EventPP.xcscheme  test_DNS.xcscheme  test_somethine.xcscheme  xcschememanagement.plist
EventPP/Buffer/: Buffer.cpp  Buffer.hpp  BufferQueue.cpp  BufferQueue.hpp  EvBufferAdapter.cpp  EvBufferAdapter.hpp
EventPP/ProtocolSyntax/: ProtocolSyntax.cpp  ProtocolSyntax.hpp
EventPP/ProtocolSyntax/Custom/: CustomSyntaxAdapter.cpp  CustomSyntaxAdapter.hpp
EventPP/ProtocolSyntax/EchoProtocol/: ConsoleEchoProtocolSyntaxAdapter.cpp
EventPP/ProtocolSyntax/Socks5/: Socks5LinkRequestState.hpp  Socks5ProtocolSyntaxAdapter.cpp  Socks5ProtocolSyntaxAdapter.hpp  Socks5State.cpp  Socks5State.hpp  Socks5TransmitState.cpp  Socks5TransmitState.hpp
EventPP/ProtolSyntax/EchoProtocol/: ConsoleEchoProtocolSyntaxAdapter.hpp  EchoProtocolSyntaxAdapter.cpp  EchoProtocolSyntaxAdapter.hpp
EventPP/ProtolSyntax/Socks5/: Socks5AuthState.cpp  Socks5AuthState.hpp  Socks5LinkRequestState.cpp  Socks5ProtocolSyntaxAdapter.cpp  Socks5State.hpp  Socks5TransmitState.hpp
EventPP/Stream/: Stream.cpp  Stream.hpp
EventPP/TCP/: TCPConnection.cpp  TCPConnection.hpp  TCPConnectionFactory.cpp  TCPConnectionFactory.hpp  TCPServer.cpp  TCPServer.hpp
EventPP/UDP/: UDPConnection.cpp  UDPConnection.hpp  UDPServer.cpp  UDPServer.hpp
include/: Communicator.hpp  CommunicatorStateMachine.hpp  Runloop.hpp  SocketAddress.hpp  SocketException.hpp  SocketKit.hpp  TCPConnection.hpp  TCPServer.hpp  UDPConnection.hpp  UDPServer.hpp
include/libSocketKit/: AsyncInterface.hpp  CommunicatorInterface.hpp  CommunicatorStateMachine.hpp  Data.hpp  Endpoint.hpp  NoCopyable.hpp  Runloop.hpp  SocketException.hpp  SocketKit.hpp  TCPAcceptor.hpp  TCPConnection.hpp  TCPConnector.hpp  TCPServer.hpp  TCPSocket.hpp  UDPConnection.hpp  UDPServer.hpp  UDPSocket.hpp  UsbmuxdConnector.hpp  UsbmuxdDeviceListener.hpp  UsbmuxdProtocol.hpp  UsbmuxdSocket.hpp
include/libsocketkit/: data.hpp
src/: CMakeLists.txt  Endpoint.cpp  SocketAddress.cpp  SocketException.cpp  SocketKit.cpp
src/TCP/: TCPAcceptor.cpp  TCPConnection.cpp  TCPConnector.cpp  TCPServer.cpp  TCPSocket.cpp
src/UDP/: UDPConnection.cpp  UDPServer.cpp  UDPSocket.cpp
src/usbmuxd/: UsbmuxdConnector.cpp  UsbmuxdDeviceListener.cpp  UsbmuxdProtocol.cpp  UsbmuxdSocket.cpp
test_DNS/: main.c
test_somethine/: main.cpp
tests/: CMakeLists.txt  test_runloop.cpp  test_tcpconnection.cpp  test_tcpsocket.cpp  test_udp.cpp  test_udpsocket.cpp  test_usbmuxd.cpp
tools/: build_libplist.sh  setup_ios.sh  x_build_libplist.sh
